--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/fundrich/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FundRich基富通 | 練習作品</title>
-    <script type="module" crossorigin src="/fundrich/assets/index.41acb381.js"></script>
-    <link rel="modulepreload" href="/fundrich/assets/vendor.cad5daf5.js">
-    <link rel="stylesheet" href="/fundrich/assets/index.c43c6f93.css">
+    <title></title>
+    <script type="module" crossorigin src="/fundrich/assets/index.fcc53fc0.js"></script>
+    <link rel="modulepreload" href="/fundrich/assets/vendor.02dd62c6.js">
+    <link rel="stylesheet" href="/fundrich/assets/index.fd0d8cc1.css">
   </head>
   <body>
     <div id="app"></div>
